src/components/ArticleView/ArticleView.css
.article-content {
  @apply break-words;
  word-break: break-word;
}

.article-content *:not(.plyr__tooltip) {
  @apply max-w-full;
}

.article-content li,
.article-content p {
  @apply !my-4
}

/* 文章标题链接样式 */
.article-title a {
  @apply text-foreground font-medium no-underline
}

/* 文章内容链接样式 */
.article-content a {
  @apply border-b-[1px] border-dotted border-primary no-underline transition-colors text-primary
}

/*表格*/
.article-content td {
  @apply text-content2-foreground text-sm
}

/*code 相关样式 */
.article-content code:not(pre code) {
  @apply whitespace-pre-wrap before:content-none after:content-none border font-medium font-mono dark:text-default-500 rounded text-default-600 bg-default-100 dark:bg-default-100/80 px-1.5 py-0.5
}

.article-content pre code {
  @apply whitespace-pre md:whitespace-pre-wrap;
}


/*https://github.com/shikijs/shiki/issues/3*/
.line-numbers code {
  counter-increment: step 0;
  counter-reset: step;
}

.line-numbers code .line::before {
  color: hsl(var(--heroui-default-400));
  content: counter(step);
  counter-increment: step;
  display: inline-block;
  margin-right: 1.5rem;
  text-align: right;
  width: 1rem;
}

.article-content blockquote > p {
  @apply before:content-none after:content-none
}

.article-content figure {
  @apply my-4 !w-auto
}

iframe {
  @apply aspect-video !border-none rounded-lg h-auto w-full shadow-custom
}

blockquote {
  @apply !not-italic
}

figcaption {
  @apply !italic
}

/*Plyr 自定义样式*/
.plyr {
  --plyr-audio-border: none;
  --plyr-audio-control-color: hsl(var(--heroui-content4-foreground));
  --plyr-audio-controls-background: hsl(var(--heroui-content1));
  --plyr-color-main: rgba(255, 255, 255, 0.9);
  --plyr-tooltip-arrow-size: 0;
  --plyr-tooltip-background: hsl(var(--heroui-content1));
  --plyr-tooltip-color: hsl(var(--heroui-content1-foreground));
  --plyr-tooltip-shadow: var(--shadow-custom);
}

.plyr__controls {
  @apply !py-1.5 !px-2.5 !m-4 !rounded-2xl !backdrop-blur-xl !bg-gray-600/50 !bg-none
}

.plyr__control--overlaid {
  @apply !bg-white !shadow-custom !text-black/70
}

.plyr__controls__item {
  @apply !bg-transparent
}

.plyr__slider__thumb {
  @apply !shadow-custom !border
}

/*YouTube 播放器视觉修复*/
iframe.vds-youtube[data-no-controls] {
  position: absolute;
}

/*代码主题跟随系统当前使用主题*/
html[class$="dark"] .shiki,
html[class$="dark"] .shiki span,
div.force-dark-code-theme .shiki,
div.force-dark-code-theme .shiki span {
  background-color: var(--shiki-dark-bg) !important;
  color: var(--shiki-dark) !important;
}

/*image gallery*/
.PhotoView-Slider__BannerWrap {
  @apply pt-safe-or-4 px-safe-or-4 h-auto flex-row-reverse
}

/*图片计数显示*/
.PhotoView-Slider__Counter {
  @apply hidden;
}

/*顶部工具栏*/
.PhotoView-Slider__BannerWrap {
  @apply bg-transparent;
}

/*关闭按钮*/
.PhotoView-Slider__toolbarIcon {
  @apply p-2 bg-black/50 rounded-full;
}

.PhotoView-Slider__BannerRight svg {
  @apply size-8
}

/*导航按钮容器*/
.PhotoView-Slider__ArrowLeft, .PhotoView-Slider__ArrowRight {
  @apply hidden w-auto px-safe-offset-4 md:flex animate-in fade-in zoom-in
}

/*导航按钮*/
.PhotoView-Slider__ArrowLeft svg, .PhotoView-Slider__ArrowRight svg {
  @apply bg-black/50 rounded-full p-2 size-4;
}

